--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
 </head>
 <body>
 
+<audio id="background-music" loop autoplay>
+    <source src="https://musiclab.chromeexperiments.com/Song-Maker/song/4981551389605888/download" type="audio/wav">
+    Your browser does not support the audio tag.
+</audio>
+
 <div id="game-container">
     <h1 style="color: #4CAF50;">Dino Zoo Game</h1>
     <p id="money-display" style="color: #333;">Money: $<span id="money">1000</span></p>
