--- a/index.html
+++ b/index.html
@@ -114,166 +114,96 @@
     <!-- Additional Habits -->
     <!-- Add more habitats as needed -->
 
-    <button class="button buy-button" onclick="buyTree()">Buy Tree ($1)</button>
+    <button class="button buy-button" id="buy-tree-button">Buy Tree ($1)</button>
 
     <!-- Hire People -->
-    <button class="button buy-button" onclick="hirePeople()">Hire People ($10 per minute)</button>
+    <button class="button buy-button" id="hire-people-button">Hire People ($10 per minute)</button>
 
     <!-- Buy Military Jeep -->
-    <button class="button buy-button" onclick="buyMilitaryJeep()">Buy Military Jeep ($200)</button>
+    <button class="button buy-button" id="buy-jeep-button">Buy Military Jeep ($200)</button>
 
 </div>
 
 <script>
-    let money = 1000;
-    let groundEarnings = 0;
-    let mechEarnings = 0;
-    let taserEarnings = 0;
-    let electricFenceEarnings = 0;
+    // Your existing variables and functions...
 
-    let habitats = {
-        'ground': { cost: 200, earnings: 1, maxAnimals: 3, animals: [] },
-        'mech': { cost: 500, earnings: 3, maxAnimals: 3, animals: [] },
-        'taser': { cost: 800, earnings: 5, maxAnimals: 3, animals: [] },
-        'electric-fence': { cost: 1000, earnings: 7, maxAnimals: 3, animals: [] },
-        // Add more habitats as needed
-    };
+    document.addEventListener("DOMContentLoaded", function() {
+        // Dynamically generate dinosaurs and animals
+        generateAnimals('ground', 50);
+        generateAnimals('mech', 50);
+        generateAnimals('taser', 50);
+        generateAnimals('electric-fence', 50);
+        // Generate animals for other habitats if needed
 
-    let trees = 0;
-    let people = { hired: false, cost: 10, effect: 0.2 }; // 20% reduction in bad events
-    let militaryJeep = { bought: false, cost: 200 };
+        // Set up audio
+        const audio = document.getElementById('background-music');
+        audio.volume = 0.2;
 
-    // Your existing JavaScript code here
+        // Set up button event listeners
+        document.getElementById('buy-tree-button').addEventListener('click', buyTree);
+        document.getElementById('hire-people-button').addEventListener('click', hirePeople);
+        document.getElementById('buy-jeep-button').addEventListener('click', buyMilitaryJeep);
 
-    // Dynamically generate dinosaurs and animals
-    generateAnimals('ground', 50);
-    generateAnimals('mech', 50);
-    generateAnimals('taser', 50);
-    generateAnimals('electric-fence', 50);
-    // Generate animals for other habitats if needed
+        // Play audio
+        audio.play();
 
-    function generateAnimals(habitatType, numAnimals) {
+        // Schedule a random event every 5 minutes
+        setInterval(() => handleRandomEvent('ground'), 5 * 60 * 1000);
+        setInterval(() => handleRandomEvent('mech'), 5 * 60 * 1000);
+        setInterval(() => handleRandomEvent('taser'), 5 * 60 * 1000);
+        setInterval(() => handleRandomEvent('electric-fence'), 5 * 60 * 1000);
+
+        // Your existing JavaScript code here
+    });
+
+    function addAnimalButton(containerId, name, cost, earnings, image, habitatType) {
+        const container = document.getElementById(containerId);
+
+        const button = document.createElement('button');
+        button.className = 'button buy-button';
+        button.textContent = `${name} ($${cost})`;
+        button.onclick = function() {
+            buyAnimal(name, cost, earnings, habitatType);
+        };
+
+        const animalImage = document.createElement('img');
+        animalImage.src = image;
+        animalImage.alt = name;
+        animalImage.className = 'animal-image';
+
+        container.appendChild(button);
+        container.appendChild(animalImage);
+    }
+
+    function buyAnimal(name, cost, earnings, habitatType) {
         const habitat = habitats[habitatType];
-        const containerId = habitatType + '-animal-buttons';
-
-        for (let i = 1; i <= numAnimals; i++) {
-            const animal = {
-                name: `Animal${i}`,
-                cost: Math.floor(Math.random() * 500) + 100,
-                babyCost: Math.floor(Math.random() * 100) + 50,
-                earnings: Math.random() * 5,
-                babyEarnings: Math.random() * 2,
-                image: `animal${i}.jpg`
-            };
-
-            addAnimalButton(containerId, animal.name, animal.cost, animal.earnings, animal.image, habitatType);
-            addAnimalButton(containerId, `Baby ${animal.name}`, animal.babyCost, animal.babyEarnings, animal.image, habitatType);
-        }
-    }
-
-    function handleRandomEvent(habitatType) {
-        const eventTypes = ['good', 'neutral', 'bad'];
-        const randomEventType = eventTypes[Math.floor(Math.random() * eventTypes.length)];
-
-        if (randomEventType === 'good') {
-            const moneyEarned = Math.floor(Math.random() * 1000) + 500;
-            alert(`Good Event: You earned $${moneyEarned} in the ${habitatType} Habitat!`);
-            money += moneyEarned;
+        if (money >= cost && habitat.animals.length < habitat.maxAnimals) {
+            money -= cost;
+            const animal = { name, earnings };
+            habitat.animals.push(animal);
             updateMoneyDisplay();
-        } else if (randomEventType === 'neutral') {
-            alert(`Neutral Event: Nothing happened in the ${habitatType} Habitat.`);
-        } else if (randomEventType === 'bad') {
-            const habitat = habitats[habitatType];
-            const randomAnimal = getRandomAnimal(habitatType);
-
-            if (randomAnimal) {
-                alert(`Bad Event: ${randomAnimal.name} in the ${habitatType} Habitat got sick.`);
-                removeAnimal(habitatType, randomAnimal);
-            } else {
-                alert(`Bad Event: A problem occurred in the ${habitatType} Habitat.`);
-                money -= 500;
-                updateMoneyDisplay();
-            }
+            alert(`You bought ${name} for the ${habitatType} Habitat!`);
+        } else if (habitat.animals.length >= habitat.maxAnimals) {
+            alert(`You already have the maximum number of animals in the ${habitatType} Habitat.`);
+        } else {
+            alert(`Not enough money to buy ${name}.`);
         }
     }
 
-    function getRandomAnimal(habitatType) {
+    function removeAnimal(habitatType, animal) {
         const habitat = habitats[habitatType];
-        const animals = habitat.animals;
-        return animals.length > 0 ? animals[Math.floor(Math.random() * animals.length)] : null;
-    }
-
-    function buyHabitat(habitatName, habitatCost, habitatEarnings, habitatType) {
-        if (!(habitatType in habitats)) {
-            alert('Invalid habitat type');
-            return;
-        }
-
-        if (money >= habitatCost) {
-            money -= habitatCost;
-            habitats[habitatType].earnings += habitatEarnings;
-
-            // Add purchased habitat-specific animals
-            generateAnimals(habitatType, 10);
-
-            // Schedule a random event every 5 minutes
-            setInterval(() => handleRandomEvent(habitatType), 5 * 60 * 1000);
-
-            updateMoneyDisplay();
-        } else {
-            alert(`Not enough money to buy ${habitatName}`);
-        }
-    }
-
-    function buyTree() {
-        trees++;
-        money--;
-        updateMoneyDisplay();
-        alert(`You bought a tree! Now you have ${trees} trees.`);
-    }
-
-    function hirePeople() {
-        if (!people.hired && money >= people.cost) {
-            people.hired = true;
-            money -= people.cost;
-            setInterval(() => handleRandomEventWithPeople(), 60 * 1000); // Schedule a random event every 1 minute
-            updateMoneyDisplay();
-            alert('You hired people to help manage the zoo. Bad events will occur less frequently now.');
-        } else {
-            alert('Either you have already hired people or you do not have enough money.');
-        }
-    }
-
-    function handleRandomEventWithPeople() {
-        const eventTypes = ['good', 'neutral', 'bad', 'bad', 'bad'];
-        const randomEventType = eventTypes[Math.floor(Math.random() * eventTypes.length)];
-
-        if (randomEventType === 'good') {
-            const moneyEarned = Math.floor(Math.random() * 1000) + 500;
-            alert(`Good Event: Your staff handled the situation well. You earned $${moneyEarned}!`);
-            money += moneyEarned;
-            updateMoneyDisplay();
-        } else if (randomEventType === 'neutral') {
-            alert('Neutral Event: Your staff prevented a potential issue. No significant changes.');
-        } else if (randomEventType === 'bad') {
-            const habitatTypes = Object.keys(habitats);
-            const randomHabitatType = habitatTypes[Math.floor(Math.random() * habitatTypes.length)];
-            handleRandomEvent(randomHabitatType); // Delegate to the existing random event handler
-        }
-    }
-
-    function buyMilitaryJeep() {
-        if (!militaryJeep.bought && money >= militaryJeep.cost) {
-            militaryJeep.bought = true;
-            money -= militaryJeep.cost;
-            updateMoneyDisplay();
-            alert('You bought a military jeep! Bad events will have less impact now.');
-        } else {
-            alert('Either you have already bought a military jeep or you do not have enough money.');
+        const index = habitat.animals.indexOf(animal);
+        if (index !== -1) {
+            habitat.animals.splice(index, 1);
         }
     }
 
     // Your existing functions...
+
+</script>
+</body>
+</html>
+ Your existing functions...
 
 </script>
 </body>
